--- a/puzzle12.html
+++ b/puzzle12.html
@@ -252,7 +252,7 @@ Licence URI: https://www.os-templates.com/template-terms
                 }
 
                 function rules() {
-                    alert('. \nThe no. of steps taken will be counted.');
+                    alert('Подреди парчетата, за да получиш същата снимка!');
                 }
             </script>
         </div>
